fix: layout z-index bug

--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -15,12 +15,14 @@ header {
   height: var(--head-height);
   width: 100%;
   background-color: white;
+  z-index: 4;
 }
   
 header * {
   text-decoration: none;
   list-style: none;
   user-select: none;
+  z-index: 5;
 }
   
 header .logo {
@@ -105,6 +107,7 @@ header li a:hover {
 
 #toggle-nav, label #open-nav, label #close-nav {
   display: none;
+  z-index: 4;
 }
 
 .sidebar {
@@ -115,6 +118,7 @@ header li a:hover {
   height: 100%;
   background-color: white;
   transition: all 300ms ease;
+  z-index: 4;
 }
 
 .sidebar * {
